<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <!-- Done: Add data binding node -->
    <data>
        <variable
            name="repViewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <!-- Done: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layoutDescription="@xml/fragment_representative_motion_scene"
        android:layout_margin="@dimen/default_margin">

        <!-- Done: Add visual styling and content -->
        <TextView
            android:id="@+id/search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_representative_search_title_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Done: Add data binding value -->
        <!-- Done: Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Address Line 1"
            android:inputType="textPostalAddress"
            android:text="@{repViewModel.address.line1}"
            android:hint="@string/fragment_representative_address_line_1_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />

        <!-- Done: Add data binding value -->
        <!-- Done: Add visual styling and content -->
        <EditText
            android:id="@+id/address_line_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_0dp"
            android:autofillHints="Address Line 2"
            android:inputType="textPostalAddress"
            android:text="@{repViewModel.address.line2}"
            android:hint="@string/fragment_representative_address_line_2_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <!-- Done: Add data binding value -->
        <!-- Done: Add visual styling and content -->
        <EditText
            android:id="@+id/city"
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:autofillHints="City"
            android:inputType="textPostalAddress"
            android:text="@{repViewModel.address.city}"
            android:hint="@string/fragment_representative_city_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <!-- Done: Add default values from provided resources  -->
        <!-- Done: Add data binding value -->
        <!-- Done: Add visual styling and content -->
        <Spinner
            android:id="@+id/state"
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="@dimen/layout_0dp"
            android:autofillHints="State"
            stateValue="@{repViewModel.address.state}"
            android:entries="@array/states"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/city"
            app:layout_constraintBottom_toBottomOf="@id/city"/>

        <!-- Done: Add data binding value -->
        <!-- Done: Add visual styling and content -->
        <EditText
            android:id="@+id/zip"
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="wrap_content"
            android:autofillHints="Postal Code"
            android:inputType="number"
            android:text="@{repViewModel.address.zip}"
            android:maxLength="5"
            android:hint="@string/fragment_representative_postal_code_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <!-- Done: Add visual styling and label -->
        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/zip"
            android:text="@string/fragment_representatives_find_my_representatives_button_text"
            style="@style/ButtonStyle" />

        <!-- Done: Add visual styling and content -->
        <Button
            android:id="@+id/button_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_respresentative_use_my_location_button_text"
            app:layout_constraintTop_toBottomOf="@id/button_search"
            android:layout_marginTop="@dimen/default_margin"
            style="@style/ButtonStyle" />

        <!-- Done: Add visual styling and content -->
        <TextView
            android:id="@+id/representative_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/fragment_representative_representative_title_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toBottomOf="@id/button_location" />

        <!-- Done: Add Representatives RecyclerView -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_representative_recyclerView"
            android:layout_width="@dimen/layout_0dp"
            android:layout_height="@dimen/layout_0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/representative_title"/>

        <!-- Done: Add visual styling and content -->
        <TextView
            android:id="@+id/list_placeholder"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_0dp"
            android:gravity="center"
            android:textAlignment="center"
            android:visibility="gone"
            motion:visibilityMode="ignore"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>